--- a/angular.json
+++ b/angular.json
@@ -52,6 +52,22 @@
                   "maximumError": "5mb"
                 }
               ]
+            },
+            "dev": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.ts"
+                }
+              ]
+            },
+            "local": {
+              "fileReplacements": [
+                {
+                  "replace": "src/environments/environment.ts",
+                  "with": "src/environments/environment.local.ts"
+                }
+              ]
             }
           }
         },
@@ -63,7 +79,14 @@
           "configurations": {
             "production": {
               "browserTarget": "angdemo:build:production"
+            },
+            "dev": {
+              "browserTarget": "angdemo:build:dev"
+            },
+            "local": {
+              "browserTarget": "angdemo:build:local"
             }
+            
           }
         },
         "extract-i18n": {
@@ -117,6 +140,12 @@
           "configurations": {
             "production": {
               "devServerTarget": "angdemo:serve:production"
+            },
+            "dev": {
+              "devServerTarget": "angdemo:serve:dev"
+            },
+            "local": {
+              "devServerTarget": "angdemo:serve:local"
             }
           }
         },
